# project_copy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: flake8.yml
brain_games/: engine.py
brain_games/games/: brain_calc_module.py  brain_even_module.py  brain_gcd_module.py  brain_prime_module.py  brain_progression_module.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
