[tool.poetry]
name = "copy of the python-project-lvl1"
version = "0.1.0"
description = ""
authors = ["mbgoodguy <nerooren4001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
